# demo-pydantic-generic-serialization

./: README.md  pyproject.toml
src/demo/: models.py  serialization.py
tests/: test_serialization.py
