[project]
name = "demo"
version = "0.1.0"
description = "A demo of serializing generic data with pydantic"
authors = [{name = "Rob Blackbourn", email = "rob.blackbourn@gmail.com"}]
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
